--- a/public/reset.css
+++ b/public/reset.css
@@ -136,3 +136,10 @@ table {
   font-weight: 400;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Cafe24Shiningstar';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Shiningstar.woff')
+    format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
