--- a/public/reset.css
+++ b/public/reset.css
@@ -136,3 +136,10 @@ table {
   font-weight: 400;
   font-style: normal;
 }
+@font-face {
+  font-family: 'S-CoreDream-3Light';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff')
+    format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
