Feat: 팝업기능 추가

--- a/public/reset.css
+++ b/public/reset.css
@@ -129,6 +129,14 @@ table {
   border-spacing: 0;
 }
 
+/* Cuscom */
+div.popup-border-radius {
+  border-radius: 8px;
+}
+div.swal2-html-container {
+  margin: 0;
+}
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
